Metadata v2.3/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing2__c</fullName>
        <description>Text Multi Picklist Description</description>
        <inlineHelpText>Mutlipicklist Help Text</inlineHelpText>
        <label>Testing2</label>
        <picklist>
            <picklistValues>
                <fullName>pick1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pick2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Testing461__c</fullName>
        <description>Email Field Description</description>
        <inlineHelpText>Email Help Text</inlineHelpText>
        <label>Testing  461</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Testing463__c</fullName>
        <defaultValue>19.2</defaultValue>
        <description>Number Field Description</description>
        <inlineHelpText>Number Help Text</inlineHelpText>
        <label>Testing  463</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Testing_100__c</fullName>
        <label>Testing</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Testing_101__c</fullName>
        <label>Testing 101</label>
        <picklist>
            <picklistValues>
                <fullName>pick1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pick2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_147__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>Testing 147</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>meta1Test17__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Testing Lookup Field Description</description>
        <inlineHelpText>Testing Url Field Help Text</inlineHelpText>
        <label>meta1Test17</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ContactsRelatedList1</relationshipLabel>
        <relationshipName>ContactsRelatedList1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>metaTest17__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Testing Lookup Field Description</description>
        <inlineHelpText>Testing Url Field Help Text</inlineHelpText>
        <label>metaTest17</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ContactsRelatedList</relationshipLabel>
        <relationshipName>ContactsRelatedList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pageLayoutTest1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>pageLayoutTest1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>profiletest21__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>profiletest21</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>